edit empolyee create test scripts

--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,21432],[],[[4,0,0,[],[1,726,20699],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,18113],[],[[4,0,0,[],[1,882,17150],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login test","*c:\\Users\\macunanan\\Documents\\Automation\\Login_test.robot","eNqlzEEKgCAQBdCrhAfo78WEqGXb1jHJWEI6oOP96w7x9s/RcFeOk4npYQtgsdgb14ZMoRf6YJXQMxdtmLtKJk1SsMmVyqHcdKxyihr/d3Ag/wJG9jPQ","*login_test End-to-End Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Create Employee","*c:\\Users\\macunanan\\Documents\\Automation\\robot_test\\create_employee.robot","eNqtzMEJgDAQRNFWxAKcu2hAtAXPsoYRBZOVZHOwe8Ua5B8f/E6qPXHr6+042QIYW8yZKSOIL1HeMKkvgdEyhmIaxA6NSLqqLcZs8IliXBiuU2+y+ah2fx87iHsA4J1A7g==","*Create_employee End-to-End Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:21","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:21","fail":0,"id":"s1","label":"Login test","name":"Login test","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:17","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:18","fail":0,"id":"s1","label":"Create Employee","name":"Create Employee","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1744265978600;
+window.output["baseMillis"] = 1744342257946;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 21463;
+window.output["generated"] = 18229;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
