--- a/results/report.html
+++ b/results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,21648],[[4,5,6,0,[],[0,249,21392],[[7,8,9,0,[],[0,593,21041],[],[[10,0,0,[],[0,1665,19960,11],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,29493],[[4,5,6,0,[],[1,42,29447],[[7,8,9,0,[],[1,48,29438],[],[[10,0,0,[],[1,437,29048],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Automation","*C:\\Users\\macunanan\\Documents\\Automation","*..","*Robot Test","*C:\\Users\\macunanan\\Documents\\Automation\\robot_test","*../robot_test","*I360","*C:\\Users\\macunanan\\Documents\\Automation\\robot_test\\i360.robot","*../robot_test/i360.robot","*i360 End-to-End Test","*Element 'xpath=//*[@id=\"createForm\"]/div/div[1]/div/div/table/tbody/tr[1]/td[2]/span/button' not visible after 10 seconds."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Automation","*C:\\Users\\macunanan\\Documents\\Automation","*..","*Robot Test","*C:\\Users\\macunanan\\Documents\\Automation\\robot_test","*../robot_test","*Generate Report","*C:\\Users\\macunanan\\Documents\\Automation\\robot_test\\generate_report.robot","*../robot_test/generate_report.robot","*i360 End-to-End Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:20","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:22","fail":1,"id":"s1","label":"Automation","name":"Automation","pass":0,"skip":0},{"elapsed":"00:00:21","fail":1,"id":"s1-s1","label":"Automation.Robot Test","name":"Robot Test","pass":0,"skip":0},{"elapsed":"00:00:21","fail":1,"id":"s1-s1-s1","label":"Automation.Robot Test.I360","name":"I360","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:29","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:29","fail":0,"id":"s1","label":"Automation","name":"Automation","pass":1,"skip":0},{"elapsed":"00:00:29","fail":0,"id":"s1-s1","label":"Automation.Robot Test","name":"Robot Test","pass":1,"skip":0},{"elapsed":"00:00:29","fail":0,"id":"s1-s1-s1","label":"Automation.Robot Test.Generate Report","name":"Generate Report","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1744681894375;
+window.output["baseMillis"] = 1744792078097;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 21692;
+window.output["generated"] = 29510;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
