--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,27890],[],[[4,0,0,[],[0,457,27429,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,64068],[],[[4,0,0,[],[1,1354,62662],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*I360","*c:\\Users\\macunanan\\Documents\\Automation\\robot_test\\i360.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1s9NTC7NSwRCfZf85NLc1LySYn3H0pL83MSSzPw8/aL8pPyS+JLU4hL9TGMzAz0wX8mOKsbY6CfaAQA7hjaM","*i360 End-to-End Test","*Element 'xpath=//span[contains(text(), \"Reports\")]' did not appear in 20 seconds."]);
+window.output["strings"] = window.output["strings"].concat(["*","*I360","*c:\\Users\\macunanan\\Documents\\Automation\\robot_test\\i360.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1s9NTC7NSwRCfZf85NLc1LySYn3H0pL83MSSzPw8/aL8pPyS+JLU4hL9TGMzAz0wX8mOKsbY6CfaAQA7hjaM","*i360 End-to-End Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:27","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:28","fail":1,"id":"s1","label":"I360","name":"I360","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:01:04","fail":0,"id":"s1","label":"I360","name":"I360","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1744681892643;
+window.output["baseMillis"] = 1744792004544;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 27933;
+window.output["generated"] = 64115;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
