--- a/results/report.html
+++ b/results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,22532],[[4,5,6,0,[],[1,123,22404],[[7,8,9,0,[],[1,219,22302],[],[[10,0,0,[],[1,1572,20944],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,27103],[[4,5,6,0,[],[1,43,27058],[[7,8,9,0,[],[1,51,27047],[],[[10,0,0,[],[1,1538,25558],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Automation","*C:\\Users\\macunanan\\Documents\\Automation","*..","*Robot Test","*C:\\Users\\macunanan\\Documents\\Automation\\robot_test","*../robot_test","*Account Creation","*C:\\Users\\macunanan\\Documents\\Automation\\robot_test\\Account_Creation.robot","*../robot_test/Account_Creation.robot","*Create_employee End-to-End Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Automation","*C:\\Users\\macunanan\\Documents\\Automation","*..","*Robot Test","*C:\\Users\\macunanan\\Documents\\Automation\\robot_test","*../robot_test","*I360","*C:\\Users\\macunanan\\Documents\\Automation\\robot_test\\i360.robot","*../robot_test/i360.robot","*i360 End-to-End Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:21","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:23","fail":0,"id":"s1","label":"Automation","name":"Automation","pass":1,"skip":0},{"elapsed":"00:00:22","fail":0,"id":"s1-s1","label":"Automation.Robot Test","name":"Robot Test","pass":1,"skip":0},{"elapsed":"00:00:22","fail":0,"id":"s1-s1-s1","label":"Automation.Robot Test.Account Creation","name":"Account Creation","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:26","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:27","fail":0,"id":"s1","label":"Automation","name":"Automation","pass":1,"skip":0},{"elapsed":"00:00:27","fail":0,"id":"s1-s1","label":"Automation.Robot Test","name":"Robot Test","pass":1,"skip":0},{"elapsed":"00:00:27","fail":0,"id":"s1-s1-s1","label":"Automation.Robot Test.I360","name":"I360","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1745205659584;
+window.output["baseMillis"] = 1745207011011;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 22554;
+window.output["generated"] = 27120;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
