--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,25282],[],[[4,0,0,[],[1,472,24803],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,19029],[],[[4,0,0,[],[1,799,18202],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*I360","*c:\\Users\\macunanan\\Documents\\Automation\\robot_test\\i360.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1s9NTC7NSwRCfZf85NLc1LySYn3H0pL83MSSzPw8/aL8pPyS+JLU4hL9TGMzAz0wX8mOKsbY6CfaAQA7hjaM","*i360 End-to-End Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Account Creation","*c:\\Users\\macunanan\\Documents\\Automation\\robot_test\\Account_Creation.robot","eNqtzEEKgCAQRuGrhAfo30sJYldoHZOMJKQDOt6/6Azxlh+8haarcVpNyjdbAMFi79w6CsVR6Q2bxFG4aocfKoU0S0WTU/RQ7gofo4yqR2j82fyZcb8vF5B7AEplQUo=","*Create_employee End-to-End Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:25","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:25","fail":0,"id":"s1","label":"I360","name":"I360","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:18","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:19","fail":0,"id":"s1","label":"Account Creation","name":"Account Creation","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1745207009301;
+window.output["baseMillis"] = 1745801819068;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 25307;
+window.output["generated"] = 19157;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
