--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,20991],[],[[4,0,5,[],[1,822,20154],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,24527],[],[[4,0,0,[],[1,894,23617],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*employee edit No","*c:\\Users\\macunanan\\Documents\\Automation\\robot_test\\employee_edit_No.robot","eNqtzEEKgzAURdGtFBfQNw9WkDrurOPw1ScGkvyS/Ay6e8U1yB0euL089sLt1W0h0gF4O3wrS0WSpWU5w6RLS8xWMTbTJBY0o+is5o3VwPSL+ic912D+o8/LuuH2ZQ8ZDl5BQYo=","*Create Employee End-to-End Test","*<p>Full workflow to edit an employee in the system.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login test","*c:\\Users\\macunanan\\Documents\\Automation\\robot_test\\Login_test.robot","eNqzSVTIKEpNs1VKy8xJtdLX13e20g8tTi0q1s9NTC7NSwRCfZf85NLc1LySYn3H0pL83MSSzPw8/aL8pPyS+JLU4hJ9n/z0zDwwUw8sqmRHRcNs9BPtAE2DPLg=","*login_test End-to-End Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:21","fail":0,"id":"s1","label":"employee edit No","name":"employee edit No","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:24","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:25","fail":0,"id":"s1","label":"Login test","name":"Login test","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1745908590545;
+window.output["baseMillis"] = 1745910739010;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 21052;
+window.output["generated"] = 24570;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
